css/style.css
/* ... */
.header .hamburger-menu {
    position: absolute;
    top: 0;
    left: 15px;
    bottom: 0;
    margin: auto;
    width: 30px;
    height: 55px;
    cursor: pointer;
}

.mobile-bar-title {
    margin: 0;
    padding: 14px 65px;
    font-size: 20px;
}

.header .bar,.header .bar:after,.header .bar:before {
    width: 30px;
    height: 3px;
}

.header .bar {
    position: relative;
    transform: translateY(25px);
    background: #fff;
    transition: all 0 300ms;
}

.header .bar.animate {
    background: rgba(255,255,255,0);
}

.header .bar:before {
    content: "";
    position: absolute;
    left: 0;
    bottom: 10px;
    background: #fff;
    transition: bottom 300ms 300ms cubic-bezier(0.23,1,0.32,1),transform 300ms cubic-bezier(0.23,1,0.32,1);
}

.header .bar:after {
    content: "";
    position: absolute;
    left: 0;
    top: 10px;
    background: #fff;
    transition: top 300ms 300ms cubic-bezier(0.23,1,0.32,1),transform 300ms cubic-bezier(0.23,1,0.32,1);
}

.header .bar.animate:after {
    top: 0;
    transform: rotate(45deg);
    transition: top 300ms cubic-bezier(0.23,1,0.32,1),transform 300ms 300ms cubic-bezier(0.23,1,0.32,1);
}

.header .bar.animate:before {
    bottom: 0;
    transform: rotate(-45deg);
    transition: bottom 300ms cubic-bezier(0.23,1,0.32,1),transform 300ms 300ms cubic-bezier(0.23,1,0.32,1);
}

.darkenizer {
    background-color: #222222b0;
    height: 100vh;
    width: 100vw;
    position: fixed;
    left: 260px;
    top: 0px;
    -webkit-transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    -o-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
}

.transparent {
    opacity: 0;
}

/*-----------------------------------------------------------------*/
/*                      MAIN CONTENT                               */
/*-----------------------------------------------------------------*/
.main-content {
    background: #FFF;
    width: 740px;
}

.main-content p {
    color: #2c2c2c;
    font-family: 'Poppins', sans-serif;
    font-size: 14px;
    font-weight: 300;
    line-height: 28px;
}

/* === Section Configure === */
.main-content section {
    margin-top: -30px;
    padding: 90px 70px 60px 70px;
    position: relative;
    border-bottom: solid 1px #EEE;
}

/* === Section Header === */
.main-content section .section-header {
    margin-bottom: 40px;
    position: relative;
}

.main-content section .section-header h2 {
    color: var(--secondary-color);
    display: inline-block;
    font-family: 'Poppins', sans-serif;
    font-size: 17px;
    font-weight: 700;
	letter-spacing: 3px;
    margin: 0;
    text-transform: uppercase;
    position: relative;
	
}

/* === Section Header Light === */
.main-content section .section-header-light {
    margin-bottom: 60px;
    position: relative;
    z-index: 1;
}

.main-content section .section-header-light h2 {
    color: #FFF !important;
    display: inline-block;
    font-family: 'Poppins', sans-serif;
    font-size: 14px;
    font-weight: 400;
    margin: 0;
    text-transform: uppercase;
    padding-left: 20px;
    position: relative;
}

.main-content section .section-header-light h2:before {
    content: '';
    position: absolute;
    background: transparent;
    bottom: 10px;
    left: 0;
    height: 16px;
    width: 16px;
    border-left: solid 3px #FFF !important;
    border-top: solid 3px #FFF !important;
}

.main-content section .section-header-light h2:after {
    content: '';
    position: absolute;
    background: transparent;
    bottom: -10px;
    right: -17px;
    height: 16px;
    width: 16px;
    border-right: solid 3px #FFF !important;
    border-bottom: solid 3px #FFF !important;
}

/*-----------------------------------------------------------------*/
/*                      SECTION ABOUT                              */
/*-----------------------------------------------------------------*/
.about .intro ul.info {
    margin-top: 40px;
    margin-bottom: 0;
    padding: 0;
    list-style: none;
}

.about .intro ul.info li {
    padding: 7px 0;
    font-family: 'Poppins', sans-serif;
    font-weight: 300;
    color: #0C0C0C;
    font-size: 14px;
}

.about .intro ul.info li:first-child {
    padding-top: 0;
}
.about .intro ul.info li:last-child {
    padding-bottom: 0;
}

.about .intro p {
    margin: 0;
}

.about .resume-download {
    display: block;
    position: absolute;
    right: 0;
    top: -8px;
    background: var(--primary-color);
	font-family: 'Poppins', sans-serif;
    font-size: 12px;
    font-weight: 400;
    color: #FFF;
    padding: 5px 10px;
    border-radius: 3px;
}
.about .resume-download:hover, .about .resume-download:focus {
    text-decoration: none;
}

/*-----------------------------------------------------------------*/
/*                      SECTION SKILLS                             */
/*-----------------------------------------------------------------*/

.skills .item {
    margin-top: 20px;
}

.skills .item:nth-child(1), .skills .item:nth-child(2) {
    margin-top: 0px;
}

.skills .item .skill-info {
    margin-bottom: 15px;
}

.skills .item .skill-info h3 {
    font-family: 'Poppins', sans-serif;
    font-size: 14px;
    margin: 0;
}

.skills .item .skill-info span {
    font-family: 'Poppins', sans-serif;
    font-size: 12px;
    font-weight: 300;
    color: #9C9C9C;
}

.skills > .row {
    margin-bottom: -20px;
}

/*-----------------------------------------------------------------*/
/*                      SECTION RESUME                             */
/*-----------------------------------------------------------------*/
.resume .top-item {
    margin-top: 0 !important;
}

.resume .resume-item {
    background: #FFF;   
    margin-top: 30px;
    max-height: 140px;
    overflow: hidden;
}

.resume .resume-item h2 {
    font-size: 16px;
    font-weight: 700;
    margin: 0 0 10px;
}

.resume .resume-item span {
    color: #666;
    display: block;
    font-size: 12px;
    font-weight: 300;
    margin: 0 0 10px;
}
/* ... */

